@startuml
title Bitcoin Data Graph

class owner {
    id : int
}

class address {
    + id : int
    ---
    + owner : Owner
}

class sent {
    + value : float
}

class output {
    + id : int
    + value : int
    + is_coinbase : bool
    + label : String
    ---
    + address : Address
}

owner "1" <-- "N" address : owns
address "1" <-- "N" output : output address
output "1" -- "N" sent
sent "N" -- "1" output

@enduml
